syntax = "proto3";

option java_package = "hmda.persistence.serialization";
option optimize_for = SPEED;

import "institution.proto";
import "filing.proto";

message InstitutionCreatedMessage {
    InstitutionMessage institution = 1;
}

message InstitutionWithLouMessage {
    InstitutionMessage institution = 1;
}

message InstitutionModifiedMessage {
    InstitutionMessage institution = 1;
}

message FilingAddedMessage {
    FilingMessage filing = 1;
}

message InstitutionDeletedMessage {
    string lei = 1;
    int32 year =2;
}

message InstitutionNotExistsMessage {
    string lei = 1;
}

message InstitutionKafkaEventMessage {
    string eventType = 1;
    oneof institutionEventField {
        InstitutionCreatedMessage institutionCreatedField = 2;
        InstitutionModifiedMessage institutionModifiedField = 3;
        InstitutionDeletedMessage institutionDeletedField = 4;
        InstitutionWithLouMessage InstitutionWithLouField = 5;
    }
}
